Feature/woozi 20260211 (#37)